Intro 작업 / login 오류메세지 작업